@@ -1482,7 +1482,8 @@ F:RES_DARK
 
 N:140:of *Brightness*
 X:A:0:9
-T:39:0:99
+#T:39:0:99
+T:39:0:1
 W:0:1:40:5000
 R:100
 F:LITE1
