@@ -569,7 +569,7 @@ static cptr k_info_flags1[] =
 	"TUNNEL",
 	"SPEED",
 	"BLOWS",
-	"CHAOTIC",	// "LIFE",
+	"LIFE",	// "LIFE",
 	"VAMPIRIC",	// "XXX4",
 	"SLAY_ANIMAL",
 	"SLAY_EVIL",
@@ -790,7 +790,8 @@ cptr k_info_flags5[] =
 	"XXX8X23",
 	"XXX8X24",
 	"XXX8X25",
-	"LIFE",		//"XXX8X27",
+	"XXX8X25",
+//	"LIFE",		//"XXX8X27",
 	"CHAOTIC",	//"XXX8X26",
 	"INVIS",	//"XXX8X28",
 	"SENS_FIRE",	//"XXX8X25",
