@@ -562,3 +562,4 @@ Change list for PernMangband
 - fixed a bug that allowed ego-torches to burn forever.
 - some special attacking effect (like Chaos/Vorpal/Vampiric) implemented.
   (but they don't work in pvp yet!)
+- Items with high bonus get *higher* prices.
